# katrain-bots

./: .gitignore  LICENSE  README.md  ai2gtp.py  ai_performance.pickle  analyze_games-20b.ipynb  analyze_games-500visit.ipynb  analyze_games.ipynb  analyze_rank.py  analyze_rank_plots.py  calibrated_ai_performance.jank.pickle  calibrated_ai_performance.pick.pickle  calibrated_ai_performance.pickle  calibrated_ai_performance.scoreloss.pickle  calibrated_ai_performance.weighted.pickle  config.json  engine_server.py  games.csv  kata_config.cfg  move-eval-interpolate.py  plot_move_rank.ipynb  pyproject.toml  quality-est.csv  rank_model.ipynb  rank_utils.py  segment_rank_model.ipynb  selfplay.py  selfplay_calibrated.py  selfplay_calibrated_sc.py  selfplay_calibration_rank_elo.ipynb  selfplay_model.ipynb  selfplay_rank_model.py  selfplay_simple.py  selfplay_tournament.py  selfplay_tournament_simple.py  settings.py  start.py  start_bot.py  stats.py  test-est.csv  (+2 more)
sgf_ogs/: KaTrain_KaTrain aisimple vs OGS 2022-11-11 22 45 35_B+1.2.sgf  KaTrain_KaTrain aisimple vs OGS 2022-11-12 15 25 25_B+6.8.sgf  KaTrain_KaTrain aisimple vs OGS 2022-11-12 15 26 27_B+51.8.sgf  KaTrain_KaTrain aisimple vs OGS 2022-11-12 15 39 27_B+136.8.sgf  KaTrain_KaTrain aisimple vs OGS 2022-11-12 15 42 31_B+63.2.sgf  KaTrain_KaTrain aisimple vs OGS 2022-11-12 15 55 25_B+159.7.sgf  KaTrain_KaTrain aisimple vs OGS 2022-11-12 16 04 30_W+1.4.sgf  KaTrain_KaTrain aisimple vs OGS 2022-11-12 18 49 36_B+65.6.sgf  KaTrain_KaTrain aisimple vs OGS 2022-11-12 19 36 41_B+1.6.sgf  (+19376 more)
(+18629 files in other folders)
