[tool.poetry]
name = "katrain-bots"
version = "1.3"
description = ""
authors = ["Sander Land <sander.land@cognite.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.8"
katrain = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
